    * DocBook-formatter has support for admonitions
    * DocBook-formatter will export the edithistory inside as the generated 
      article's revision history. Doesn't add history of included pages.
    * DocBook-formatter has support for the MoinMoin comment element, though
      only inline comments are likely to be valid since the DocBook remark is
      and inline element.

  Other changes:
    * cfg.show_login is gone, see code in theme/__init__.py, this affects
      many themes!
    * needs a new userprefs/ plugin directory
    * removed attachments direct serving (cfg.attachments)
    * the rst-parser's admonition's class names are no longer prepended with
      "admonition_". Instead the class names are now for example "note"
      and not "admonition_note".
    * DocBook-formatter generates a valid DOCTYPE
    * DocBook-formatter's table support has been improved
    * DocBook-formatter's handling of definitions and glossaries is more robust
    * DocBook-formatter supports program language and line numbering in 
      code areas
    * A few other fixes to the DocBook-formatter.


Version 1.6.1:
  New features:
    * Improved params for [[target|label|params]]:
      Added accesskey link tag attribute, e.g.: [[target|label|accesskey=1]].
      Additionally to specifying link tag attributes (like class=foo), you can
      now also specify &key=value for getting that into the query string of
      the link URL.
      The "&" character is important, don't forget it or it won't get into the
      query string!
      E.g. for an attachment, you can use:
      [[attachment:foo.pdf|Direct download of foo.pdf|&do=get]]
      E.g. for linking to some specific diff, you can use:
      [[SomePage|see that diff|&action=diff,&rev1=23,&rev2=42]]
      See also the updated HelpOnLinking page!
    * AdvancedSearch: make multipe categories/languages/mimetype selections possible
    * Added a configuration directive to only do one bind to the LDAP server.